<resources>
    <string name="app_name">Blu-Med</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="nomMed">Nombre del Medicamento</string>
    <string name="indMed">Indicaciones del Medicamento</string>
    <string name="dosisMed">Dosis</string>
    <string name="efcMed">Efectos Secundarios</string>
    <string name="precioMed">Precio</string>
    <string name="lblDatMed">Datos del Medicamento</string>
    <string name="realCompra">Realizar Compra</string>
    <string name="hisCompra">Historial de Compras</string>
    <string name="btnVerCompras">Ver Historial de Compras</string>
    <string name="blu_main">Blu-Med</string>
    <string name="ver_medicamentos">Ver Medicamentos</string>
    <string name="ver_historial">Ver Historial de Compras</string>
    <string name="Ya_cuenta">¿Ya posees una cuenta?</string>
    <string name="Ingresar">Ingresar</string>
    <string name="correo">Correo Electronico</string>
    <string name="Registrar">Registrar</string>
    <string name="contra">Contraseña</string>
    <string name="auth">Autenticar</string>
    <string name="no_cuenta">¿No tienes una cuenta?</string>
</resources>