<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:gravity="center_horizontal"
        android:text="@string/lblDatMed"
        android:textSize="24sp"
        android:textColor="@color/primary_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- Nombre del Medicamento -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtNombreMedicamento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/nomMed"
            android:textColor="@color/secondary_text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Indicaciones del Medicamento -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtIndicaciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="@string/indMed"
            android:textColor="@color/secondary_text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Dosis -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtDosis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/dosisMed"
            android:textColor="@color/secondary_text"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Efectos Secundarios -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEfectosSecundarios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="@string/efcMed"
            android:textColor="@color/secondary_text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPrecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/precioMed"
            android:textColor="@color/secondary_text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Botones -->
    <Button
        android:text="@string/guardar"
        android:onClick="guardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_color"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <Button
        android:text="@string/cancelar"
        android:onClick="cancelar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_color"/>

</LinearLayout>
